--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             </div>
             <div class="col-md-6 col-lg-5 d-block text-center text-md-start">
                 <h2 class="profile-name mt-5">Jerald Torres</h2>
-                 <!-<p class="text-muted">Quality Assurance</p> -->
+                 <!--<p class="text-muted">Quality Assurance</p> -->
                 <a href="Resume.pdf" class="btn btn-success col-5 col-sm-10 mt-3"><i class="bi bi-download me-3"></i>Resume</a>
                 <div class="social-icons mt-3 d-flex justify-content-center justify-content-md-start">
                     <a href="mailto:torresjerald8@gmail.com" class="text-decoration-none">
@@ -74,7 +74,8 @@
                <!-- I’m <span class="">Jerald</span>, a Manual QA Tester passionate about software quality. I focus on identifying issues, ensuring functionality, and improving user experience. I aim to build a career in Quality Assurance, helping develop reliable and efficient applications. With a keen eye for
                  detail and a problem-solving mindset, I’m committed to continuous learning and delivering high-quality. -->
 
-                I’m <span class="">Jerald</span>,
+                I’m <span class="">Jerald</span>, a passionate and detail-oriented web developer and designer. I love building clean, responsive, and user-friendly websites—from eye-catching front-end designs to smooth back-end functionality.
+                I enjoy turning ideas into real digital experiences and am always looking to learn, grow, and improve my craft.
             </p>
             <!-- Badge 1 -->
             <!-- <div class="col d-flex justify-content-center align-items-start">
